# hive

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  hive.config.toml  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
addons/aider-mcp/: README.md  pyproject.toml
addons/aider-mcp/aider_mcp/: __init__.py  __main__.py  server.py
app/: Cargo.toml  build.rs  github_client_id.example  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs  workflows.rs
assets/branding/: HiveLogo.html  generate-brand-assets.mjs  hive-brand-tokens.json  render-tauri-icons.sh
crates/hive-core/: Cargo.toml
crates/hive-core/src/: agent.rs  authorization.rs  chat.rs  config.rs  context_budget.rs  crypto.rs  e2ee.rs  events.rs  git_context.rs  identity.rs  lib.rs  policy.rs  proposals.rs  runtime.rs  schedule.rs  session.rs  skills.rs  time_util.rs  vault.rs  workflow.rs
crates/hive-proto/: Cargo.toml
crates/hive-proto/bindings/: AppInfo.ts
crates/hive-proto/src/: lib.rs
crates/hive-relay/: Cargo.toml
crates/hive-relay/src/: lib.rs  main.rs  social.rs  store.rs  token.rs
crates/hive-runtime/: Cargo.toml
crates/hive-runtime/src/: chat_service.rs  context.rs  directives.rs  envelope_verifier.rs  event_store.rs  git_attribution.rs  github.rs  identity_store.rs  lib.rs  mcp.rs  mcp_oauth.rs  mentions.rs  peer.rs  peer_iroh.rs  prompt.rs  relay_client.rs  remote_manifest.rs  sync_engine.rs  tool_loop.rs  vault_fetcher.rs
crates/hive-runtime/src/provider/: anthropic.rs  claude_code.rs  dispatch.rs  mod.rs  openai.rs  subprocess.rs
crates/hive-runtime/tests/: mcp_stdio.rs
deploy/homebrew/: README.md
deploy/homebrew/Casks/: hive.rb
docs/: README.md  architecture.md  hive-agent-architecture-matrix.md  hive-issue-trackers.md  hive-logo-system.md  hive-relay-api.md  hive-social-graph-plan.md  multiuser.md  packaging.md  relay-deploy.md  security-hardening-plan.md
docs-site/: CNAME  index.md  version.json
docs-site/addons/: byo-agents.md  linear.md  mcp.md  skills.md
docs-site/concepts/: agents.md  identity.md  tools-and-consent.md  vaults.md  workspaces.md
docs-site/features/: collaboration.md  collaborators.md  git.md  invites.md  multi-agent.md  onboarding.md  right-rail.md  scheduling.md  settings.md  voice-and-slash.md  workflows.md
docs-site/getting-started/: configuring-a-runtime.md  first-chat.md  first-launch.md  homebrew.md
docs-site/images/: CAPTURE_GUIDE.md  README.md
docs-site/networking/: lan.md  rendezvous.md  self-host.md  turn.md
docs-site/ops/: build.md  deployment.md  managed-service.md  pricing.md  server-side-membership.md  tiering.md  troubleshooting.md
docs-site/reference/: config-toml.md  invite-payload.md  wire-protocols.md
docs-site/stylesheets/: brand.css
examples/: hive.config.example.toml
scripts/: build-linux.sh  build-windows-remote.sh  build-windows.sh  build.sh  serve-docs.sh
web/: package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/bindings/: AppInfo.ts  AppSettingsDto.ts  ApprovalDto.ts  ChatMessageDto.ts  ChatSessionDto.ts  ChatStreamEvent.ts  ChatSummaryDto.ts  ContextTelemetryDto.ts  GitFileDiffDto.ts  IssuedRelayTokenDto.ts  McpServerDto.ts  ProposalDto.ts  ReactionDto.ts  RelayTokenDto.ts  RelayUserDto.ts  RuntimeSummaryDto.ts  SkillDto.ts  ToolCallDto.ts  ToolResultDto.ts  VaultSourceDto.ts  WorkflowDefinitionDto.ts  WorkflowNodeDto.ts  WorkflowNodeRunDto.ts  WorkflowRunDto.ts  WorkflowRunEvent.ts  WorkspaceAgentDto.ts  WorkspaceInfoDto.ts  WorkspaceMemberDto.ts
web/src/components/: AddWorkspaceModal.tsx  ChatView.toolcards.test.tsx  ChatView.tsx  CommandPalette.test.tsx  CommandPalette.tsx  Dialog.tsx  DiffView.tsx  FriendsView.test.tsx  FriendsView.tsx  HiveBrand.tsx  LogsView.tsx  Markdown.tsx  Onboarding.test.tsx  Onboarding.tsx  RightRail.tsx  SettingsView.tsx  Sidebar.tsx  Skeleton.tsx  Toast.test.tsx  Toast.tsx  UpdateBanner.tsx  WorkflowBuilder.tsx  WorkflowsPane.test.tsx  WorkflowsPane.tsx  WorkspaceRail.tsx  ui.Modal.test.tsx  ui.tsx
web/src/lib/: attachments.test.ts  attachments.ts  confirm.test.ts  confirm.ts  icons.tsx  ipc.ts  mentions.test.ts  mentions.ts  monaco-setup.ts  slash.test.ts  slash.ts  streams.test.ts  streams.ts  templates.test.ts  templates.ts  theme.ts  workflow.test.ts  workflow.ts
web/src/test/: setup.ts
