[project]
name = "aider-mcp"
version = "0.1.0"
description = "Expose aider's CLI as an MCP stdio server for Hive."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Hive contributors" }
]
dependencies = [
    "aider-chat>=0.50",
]

[project.scripts]
aider-mcp = "aider_mcp.__main__:serve"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aider_mcp*"]
